--- a/serverless/azure-functions-rest-http-trigger/package.json
+++ b/serverless/azure-functions-rest-http-trigger/package.json
@@ -1,19 +1,15 @@
 {
-  "author": "MQ Developer Experience",
-  "name": "MQAzureSample",
-  "version": "0.0.1",
-  "description": "MQ REST Sample for Azure Serverless",
-  "type": "commonjs",
-  "license": "Apache-2.0",
+  "name": "azure-serverless-tutorial",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
+    "start": "func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "axios-debug-log": "^0.8.4",
-    "debug": "^4.3.4"
+    "@azure/functions": "^4.0.0",
+    "axios": "^1.8.4",
+    "debug": "^4.4.0"
   },
-  "engines": {
-    "node": ">=14.x"
-  }
+  "main": "src/{index.js,functions/*.js}"
 }
