--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "author": "",
   "dependencies": {
-    "ibmmq": "2.0.3"
+    "ibmmq": "2.0.3",
+    "axios": "^1.8.4"
   },
   "engines": {
     "node": ">16.0.0"
@@ -14,7 +15,7 @@
   },
   "devDependencies": {
     "chai": "^4.4.1",
-    "mocha": "^10.4.0",
-    "chai-as-promised": "^7.1.1"
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^10.4.0"
   }
 }
