--- a/Node.js-OTel/Dockerfile.mqapp
+++ b/Node.js-OTel/Dockerfile.mqapp
@@ -11,7 +11,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-FROM node:20.19.2
+FROM node:20.19.2-slim
 WORKDIR /usr/src/app
 COPY package.json ./
 RUN npm install
