--- a/Node.js-OTel/package.json
+++ b/Node.js-OTel/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "debug": "^4.4.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ibmmq": "^2.1.4"
   }
 }
