Add Jaeger to internal network

--- a/Node.js-OTel/docker-compose.yaml
+++ b/Node.js-OTel/docker-compose.yaml
@@ -41,6 +41,8 @@ services:
         - 4317:4317
         - 4318:4318
         - 16686:16686
+    networks:
+      - qm1network
     environment:
         COLLECTOR_OTLP_ENABLED: true
 
