added .yml files and keys

--- a/.github/workflows/test-NodeSecrets.yml
+++ b/.github/workflows/test-NodeSecrets.yml
@@ -1,9 +1,9 @@
 name: Run Node tests using git actions secrets
 
 on:
-  push:
+  pull_request:
     branches:
-      - anitha-unittest-automation
+      - master
     paths:
       - 'Node.js/**'
 
