--- a/.github/workflows/test-JMSSecrets.yml
+++ b/.github/workflows/test-JMSSecrets.yml
@@ -1,9 +1,9 @@
 name: Run JMS Tests using git actions secrets
 
 on:
-  push:
+  pull_request:
     branches:
-      - anitha-unittest-automation
+      - master
     paths:
       - 'JMS/**'
 
