added the JMSSecrets.yml

--- a/.github/workflows/test-JMSSecrets.yml
+++ b/.github/workflows/test-JMSSecrets.yml
@@ -1,11 +1,11 @@
-name: Run Node tests using git actions secrets
+name: Run JMS Tests using git actions secrets
 
 on:
   pull_request:
     branches:
       - master
     paths:
-      - 'Node.js/**'
+      - 'JMS/**'
 
 jobs:
   test:
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create env.json from secrets
-        working-directory: Node.js
+        working-directory: JMS
         run: |
           cat << EOF > env.json
           {
@@ -42,15 +42,7 @@ jobs:
           echo "env.json path: $(pwd)/env.json"
           cat env.json
 
-      - name: Install dependencies
-        working-directory: Node.js
+      - name: Run the tests
+        working-directory: JMS
         run: |
-          npm install
-          npm install --global mocha
-
-      - name: Run Node.js tests
-        working-directory: Node.js
-        env: 
-          EnvFile: "/home/runner/work/mq-dev-patterns/mq-dev-patterns/Node.js/env.json"
-        run: mocha
-        
+          mvn -Dmaven.test.skip=false test -DEnvFile="$(pwd)/env.json"
