--- a/serverless/aws-lambda-rest/mq-lambda/package.json
+++ b/serverless/aws-lambda-rest/mq-lambda/package.json
@@ -8,8 +8,8 @@
   "author": "SAM CLI",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^1.6.0",
-    "debug": "^4.3.4"
+    "axios": "1.6.0",
+    "debug": "4.4.1"
   },
   "engines": {
     "node": ">=14.x"
