--- a/serverless/codeengine/eventemitter/package.json
+++ b/serverless/codeengine/eventemitter/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "ibmmq": "^0.9.17",
-    "axios": "^1.12.0",
-    "debug": "^4.3.3"
+    "axios": "1.12.0",
+    "debug": "4.4.1"
   },
   "scripts": {
     "start": "DEBUG=mqapp* node server.js"
