Update for new ibmmq package (#333)
* make logging output more usable and consistent
Fix pylint reports
Fix flake8 issues
Move to "ibmmq" package
Fix errors in use of MQI - eg MQOO options sent to MQCONNX

* Make use of single and double quotes more consistent

* Move to using CSP for authentication in all samples.
Update the README

* Reduce the number of flake8 exclusions

* Make logging output more helpful
Actually add the sync option for the responder

* Comments and other text

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,13 @@ amqp-vertx/target/*
 terraform.tfstate.*
 terraform.tfstate
 
+# Associated with the Python code
+venv*
+Python/tmp/
+
+# Standard Eclipse control files
+.project
+.settings 
+.classpath
+
 
